tests/course/errors/UpdateErrorAll.bru
meta {
  name: UpdateErrorAll
  type: http
  seq: 8
}

patch {
  url: {{baseUrl}}/courses/{{courseToUpdate}}
  body: json
  auth: none
}

body:json {
  {
    "name": 1,
    "provider": false,
    "category": 13541,
    "duration": true,
    "verifyUrl": false
  }
}

assert {
  res.status: eq 400
}
